# MSTD

./: .env  .gitignore  CMakeLists copy 2.txt  CMakeLists copy.txt  CMakeLists.txt  config_generator_park_avia copy.py  config_generator_park_avia.py
config/: config_kitti.yaml  config_livox.yaml  config_park_avia.yaml  estimate_poses_using_icp.yaml  test.yaml  test2.yaml
demo/: bag_to_pcd copy.cpp  bag_to_pcd.cpp  estimate_poses_using_icp.cpp  pgo_demo.cpp  place_recognition_kitti.cpp  place_recognition_livox.cpp  pseudo_loop_gt_detector.cpp
include/: MyDebugVisualizer.hpp  STDesc.h
launch/: bag_to_pcd.launch  demo_.launch  demo_kitti.launch  demo_kitti_00.launch  demo_kitti_backup.launch  demo_livox_park.launch  demo_livox_park1.launch  demo_livox_park2.launch  demo_livox_park2_noviz.launch  demo_livox_park_avia.launch  estimate_poses_using_icp.launch  launch.py  launch.sh  launch_pseudo.py  pseudo_loop_gt_detector.launch  rviz.launch
mstd/: CMakeLists.txt  cam_params.txt  main_icp.cpp  main_scancontext.cpp  main_std.cpp  run.ipynb  run.py  run.sh  screenshot-1696913337.cam
mstd/include/: CsvReader.hpp  MyDebugVisualizer.hpp  Profiler.hpp  STDesc.h
mstd/include/Scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h
mstd/script/: config_writer.ipynb
mstd/src/: Profiler.cpp  STDesc.cpp
rviz_cfg/: demo.rviz  icp_config.rviz
src/: STDesc.cpp
